frontend/src/assets/player/styles.css
.content {
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: center;
  margin: 0;
  padding: 0;
  flex: 1;
  box-sizing: border-box;
  text-align: center;
}

#header {
  margin-bottom: 20px;
}

#error-message {
  color: var(--color-error);
  margin: 0 20px;
  margin-bottom: 10px;
  min-height: 40px;
}

.dynamic-content {
  visibility: hidden; /* start invisible */
}

.content h1,
h2,
p {
  text-shadow: 0 4px 8px rgba(0, 0, 0, 0.7);
}

#player-name-and-code {
  margin: 10px;
  padding: 10px 25px;
  border-radius: 25px;
  border: 5px solid var(--accent-color-2);
  background-color: var(--color-white);
  color: var(--color-black);
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
  width: 70%;
  max-width: 600px;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  gap: 10px;
}
#player-name-and-code * {
  text-shadow: none;
}
#player-name {
  margin: 0;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}
#player-code {
  background-color: var(--accent-color-2);
  color: var(--color-black);
  border-radius: 10px;
  margin: 0;
  padding: 10px;
  border: none;
  position: relative;
  cursor: pointer;
  font-family: var(--site-font-mono);
}
#player-code:hover {
  background-color: var(--accent-color-1);
}
#player-code::after {
  content: "Copied";
  font-family: var(--site-font);
  text-align: center;
  z-index: 1;
  position: absolute;
  left: 50%;
  transform: translateX(-50%);
  text-align: center;
  bottom: 30px;
  padding: 10px;
  background-color: var(--color-white);
  border-radius: 10px;
  border: 2px solid var(--accent-color-1);
  opacity: 0;
  visibility: hidden;
  transition: opacity 0.5s ease, visibility 0s 0.5s;
}
#player-code.show-copied::after {
  opacity: 1;
  visibility: visible;
  transition: opacity 0.5s ease, visibility 0s 0s;
}
@media (max-width: 500px) {
  #player-name-and-code {
    flex-direction: column;
  }
  #player-name {
    max-width: 100%;
    text-align: center;
  }
}

.content hr {
  border: 1px solid var(--accent-color-1);
}

#playlists {
  margin-bottom: 50vh;
  width: calc(70% + 60px);
  max-width: 660px;
}

.playlist {
  margin: 10px 0;
  padding: 0;
  border-radius: 25px;
  border: 5px solid var(--accent-color-2);
  background-color: var(--accent-color-2);
  color: var(--color-black);
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
  overflow: hidden;
}
.playlist * {
  text-shadow: none;
  margin: 0;
}

.playlist:has(.playlist-name:hover) {
  border-color: var(--accent-color-1);
}
.playlist-name {
  background-color: var(--accent-color-2);
  color: white;
  cursor: pointer;
  width: 100%;
  text-align: center;
  padding: 10px 0;
}
.playlist-name:hover {
  background-color: var(--accent-color-1);
}
.playlist-name-text {
  margin: 0 20px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  color: var(--color-black);
}

.playlist-content {
  background-color: var(--color-white);
  max-height: 0; /* collapsed by default */
  transition: max-height 0.35s ease-in-out, padding 0.35s ease-in-out;
  padding: 0;
  text-align: left;
  visibility: collapse;
}
.playlist-content.open {
  padding: 10px 0;
}
.playlist-content hr {
  margin: 0 25px;
}

.playlist-link-container {
  display: flex;
  align-items: center;
  justify-content: center;
}
.playlist-link {
  background-color: var(--accent-color-2);
  padding: 10px;
  border-radius: 10px;
  text-decoration: none;
  color: var(--color-black);
  margin-bottom: 10px;
  font-weight: bold;
}
.playlist-link:hover {
  background-color: var(--accent-color-1);
}

.song-row {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  margin: 0 25px;
}

.song {
  background-color: var(--color-white);
  padding: 0;
  flex-grow: 1;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}
.song * {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.rating-input {
  font-size: 16px;
  border-radius: 8px;
  margin-left: 10px;
  outline: none;
  border: none;
  background-color: var(--color-white);
  color: var(--color-black);
  text-align: left;
  width: 33px;
  height: 34px;
  padding: 0 10px;
  background-color: red;
}

